# orcmeat

./: CMakeLists.txt  README.md
game/: CMakeLists.txt  orcmeat.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: lib.hpp
src/: CMakeLists.txt  lib.cpp
